# VelaFlow-public

./: .gitignore  .snyk  LICENSE  PROJECT_START.md  README.md  docker-compose.yml  pyproject.toml  requirements-lock.txt  requirements.txt
config/: .env.demo.example  .env.deploy.example  .env.enterprise.example  .env.example  .env.production.example  pipeline.yaml
deploy/cloud/: setup-oracle.sh  setup-vm.sh
deploy/docker/: Dockerfile  Dockerfile.premium  Dockerfile.worker  entrypoint-premium.sh
deploy/kubernetes/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa-api.yaml  ingress.yaml  keda-scaler.yaml  namespace.yaml  service.yaml
deploy/lxc/: deploy-hardened.sh  setup-enterprise.sh  setup-premium-nested.sh
deploy/observability/: docker-compose.yml  prometheus.yml
deploy/terraform/: .gitignore  README.md
deploy/terraform/generic-vm/: main.tf  terraform.tfvars.example  variables.tf
deploy/terraform/oracle-cloud/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/terraform/proxmox/: main.tf  terraform.tfvars.example  variables.tf
docs/: .pentest-encrypted.json  FAQ.md  PENTEST-ROUND2-DETAILED.md  README-legacy-R17.2.md  README-technical.md  SECURITY-AUDIT.md  architecture-codebase.md  architecture-enterprise.md  architecture-visual.md  architecture.md  deployment.md  notebooklm-setup.md  scaling-path.md  security.md  velaflow-book.md
docs/adr/: 0001-duckdb-sqlite-vs-databricks.md  0002-local-rag-vs-mosaic-ai.md  0003-terraform-iac-vs-bash-install.md
docs/diagrams/: diagram_0.mmd  diagram_1.mmd  diagram_2.mmd  diagram_3.mmd  diagram_4.mmd  diagram_5.mmd  diagram_6.mmd
prompts/: daily-summary.md  task-prioritization.md  weekend-planner.md  weekly-review.md
scripts/: backup.sh  brain-daily.service  brain-daily.timer  brain-drive-backup.service  brain-drive-backup.timer  brain-notebooklm.service  brain-notebooklm.timer  brain-sync.service  brain-sync.timer  brain-weekend.service  brain-weekend.timer  brain-weekly.service  brain-weekly.timer  build-book.sh  build-pdfs.sh  build_pdfs.py  chat_to_markdown.py  deploy-full-stack.sh  drive_backup.py  encrypt_pentest_report.py  health-check.sh  install.sh  installer.py  live_e2e_test.py  mermaid-theme.json  notebooklm-lxc-login.sh  notebooklm-push-auth.ps1  preflight.py  seed_demo.py  setup-litellm-proxy.sh  setup-lxc.sh  terraform_preflight.py
src/brain/: __init__.py  __main__.py  calendar_ctx.py  cli.py  config.py  email_sender.py  gmail.py  llm.py  llm_local.py  models.py  notebooklm.py  notion.py  organizer.py  planner.py  rag.py  todoist.py  whatsapp.py
src/brain/api/: __init__.py  app.py  auth.py  dependencies.py  middleware.py
src/brain/catalog/: __init__.py  models.py  store.py
src/brain/engine/: __init__.py  connection.py  processor.py
src/brain/gui/: __init__.py  app.py
src/brain/pipeline/: __init__.py  bronze.py  gold.py  (+2 more)
tests/: _fakes.py  _verify_e2e.py  conftest.py  test_action_ledger.py  test_api_auth.py  test_api_rag.py  test_audit_log.py  test_ban_and_rbac.py  test_billing.py  test_catalog.py  test_credential_in_transit.py  test_dashboard.py  test_demo_manager.py  test_drive_backup.py  test_e2e.py  test_engine.py  test_llm.py  test_llm_local.py  test_pentest_r18.py  test_pipeline_bronze.py  test_pipeline_gold.py  test_pipeline_scheduler.py  test_pipeline_silver.py  test_planner.py  test_rag.py  test_resilience.py  test_secure_logging.py  test_security.py  test_security_audit.py  test_security_paranoid.py  test_security_pii.py  test_storage.py  test_stress.py  test_tenant.py  test_tenant_scheduler.py  test_terraform_modules.py  test_terraform_preflight.py  test_todoist.py  test_webhooks.py  test_worker.py  (+3 more)
workflows/: daily-briefing.json  overdue-alert.json  secrets-manager.json  weekend-planner.json  weekly-review.json
(+51 files in other folders)
